# WX2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: WX2Config.cmake.in
examples/: CMakeLists.txt  main.cpp
wx2/: CMakeLists.txt
wx2/include/: CMakeLists.txt
wx2/include/wx2/: CMakeLists.txt
wx2/include/wx2/base/: CMakeLists.txt  common.hpp  hello.h  string.h  unicode_conversion.h
wx2/src/: CMakeLists.txt
wx2/src/base/: CMakeLists.txt  hello.cpp  string.cpp  unicode_conversion.cpp
